---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type p : ^\nvar ptr : p\nvar j := ^ptr\n"
---
"p"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of pointer to <error>
"ptr"@"src/main.t:15..18" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of pointer to <error>
"j"@"src/main.t:27..28" [ConstVar(Var, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
